# Mcp-file-system-server

./: .dockerignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  pyrightconfig.json  server.py  server_http.py
.venv312/: pyvenv.cfg
src/filesystem_mcp/: config.py  errors.py  gaurd.py  logging_setup.py  server.py
src/filesystem_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/filesystem_mcp/tools/: file_system.py
tools/: file_system.py
