[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filesystem-mcp"
version = "0.1.0"
description = "Filesystem MCP Server"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "mcp==1.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]